--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Hod) # Rename
 
 option(ENABLE_UNITY_BUILD "Enable Unity Build for faster compilation" OFF)
 if (ENABLE_UNITY_BUILD)
-    set(CMAKE_UNITY_BUILD ON)
+	set(CMAKE_UNITY_BUILD ON)
 endif()
 
 set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY BOTH)
@@ -18,99 +18,99 @@ include(FetchContent)
 include(ExternalProject)
 
 if(WIN32)
-  set(LIB_PREFIX "")
-  set(LIB_EXTENSION "lib")
-  set(DLL_EXTENSION "dll")
+	set(LIB_PREFIX "")
+	set(LIB_EXTENSION "lib")
+	set(DLL_EXTENSION "dll")
 elseif(APPLE)
-  set(LIB_PREFIX "lib")
-  set(LIB_EXTENSION "a")
-  set(DLL_EXTENSION "dylib")
+	set(LIB_PREFIX "lib")
+	set(LIB_EXTENSION "a")
+	set(DLL_EXTENSION "dylib")
 else()
-  set(LIB_PREFIX "lib")
-  set(LIB_EXTENSION "a")
-  set(DLL_EXTENSION "so")
+	set(LIB_PREFIX "lib")
+	set(LIB_EXTENSION "a")
+	set(DLL_EXTENSION "so")
 endif()
 
 if(WIN32)
-    if(ARCH STREQUAL "x64")
-        set(ARCH_FOLDER "Win_${ARCH}")
-    elseif(ARCH STREQUAL "arm64")
-        set(ARCH_FOLDER "Win_${ARCH}")
-    else()
-        message(FATAL_ERROR "Unsupported Windows architecture: ${ARCH}")
-    endif()
+	if(ARCH STREQUAL "x64")
+		set(ARCH_FOLDER "Win_${ARCH}")
+	elseif(ARCH STREQUAL "arm64")
+		set(ARCH_FOLDER "Win_${ARCH}")
+	else()
+		message(FATAL_ERROR "Unsupported Windows architecture: ${ARCH}")
+	endif()
 elseif(APPLE)
-    if(ARCH STREQUAL "arm64")
-        set(ARCH_FOLDER "MacOs_${ARCH}")
-    else()
-        message(FATAL_ERROR "Unsupported Apple architecture: ${ARCH}")
-    endif()
+	if(ARCH STREQUAL "arm64")
+		set(ARCH_FOLDER "MacOs_${ARCH}")
+	else()
+		message(FATAL_ERROR "Unsupported Apple architecture: ${ARCH}")
+	endif()
 elseif(UNIX)
-    if(ARCH STREQUAL "x64")
-        set(ARCH_FOLDER "Linux_${ARCH}")
-    else()
-        message(FATAL_ERROR "Unsupported Linux architecture: ${ARCH}")
-    endif()
+	if(ARCH STREQUAL "x64")
+		set(ARCH_FOLDER "Linux_${ARCH}")
+	else()
+		message(FATAL_ERROR "Unsupported Linux architecture: ${ARCH}")
+	endif()
 else()
-    message(FATAL_ERROR "Unsupported system: ${ARCH}")
+	message(FATAL_ERROR "Unsupported system: ${ARCH}")
 endif()
 
 set(THIRDPARTY_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Install/${ARCH_FOLDER}")
 
 add_library(Box2d::Box2d STATIC IMPORTED GLOBAL)
 set_target_properties(Box2d::Box2d PROPERTIES
-    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}box2d.${LIB_EXTENSION}"
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}box2d.${LIB_EXTENSION}"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
 )
 
 add_library(Freetype::Freetype STATIC IMPORTED GLOBAL)
 set_target_properties(Freetype::Freetype PROPERTIES
-    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}freetype.${LIB_EXTENSION}"
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/freetype2"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/freetype2"
+	IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}freetype.${LIB_EXTENSION}"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/freetype2"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/freetype2"
 )
 
 add_library(Fmt::Fmt STATIC IMPORTED GLOBAL)
 set_target_properties(Fmt::Fmt PROPERTIES
-    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}fmt.${LIB_EXTENSION}"
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}fmt.${LIB_EXTENSION}"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
 )
 
 add_library(Stb::Stb INTERFACE IMPORTED GLOBAL)
 set_target_properties(Stb::Stb PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
 )
 
 add_library(WindowsHModular::WindowsHModular INTERFACE IMPORTED GLOBAL)
 set_target_properties(WindowsHModular::WindowsHModular PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
 )
 
 add_library(VulkanMemoryAllocator::VulkanMemoryAllocator INTERFACE IMPORTED GLOBAL)
 set_target_properties(VulkanMemoryAllocator::VulkanMemoryAllocator PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
 )
 
 add_library(PortableFileDialogs::PortableFileDialogs INTERFACE IMPORTED GLOBAL)
 set_target_properties(PortableFileDialogs::PortableFileDialogs PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
 )
 
 add_library(Gtest::Gtest STATIC IMPORTED GLOBAL)
 set_target_properties(Gtest::Gtest PROPERTIES
-    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}gtest.${LIB_EXTENSION}"
-    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/Gtest"
-    INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/Gtest"
+	IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}gtest.${LIB_EXTENSION}"
+	INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/Gtest"
+	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/Gtest"
 )
 add_library(GtestMain::GtestMain STATIC IMPORTED GLOBAL)
 set_target_properties(GtestMain::GtestMain PROPERTIES
-    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}gtest_main.${LIB_EXTENSION}"
+	IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}gtest_main.${LIB_EXTENSION}"
 )
 
 if(WIN32)
@@ -128,11 +128,11 @@ SetupCompilation()
 
 option(BUILD_UNIT_TESTS "Enable UnitTests compilation" ON)
 if (BUILD_UNIT_TESTS)
-  include(CTest)
-  enable_testing()
-  add_subdirectory("Sources/Tests/Core")
+	include(CTest)
+	enable_testing()
+	add_subdirectory("Sources/Tests/Core")
 
-  set_target_properties(TestsCore PROPERTIES FOLDER "Test/")
+	set_target_properties(TestsCore PROPERTIES FOLDER "Test/")
 endif()
 
 set(CMAKE_SUPPRESS_REGENERATION true)
@@ -140,9 +140,9 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 if (BUILD_SHARED_LIBS)
-  set(LIB_TYPE SHARED)
+	set(LIB_TYPE SHARED)
 else()
-  set(LIB_TYPE STATIC)
+	set(LIB_TYPE STATIC)
 endif()
 
 add_subdirectory("Sources/HodEngine/Core")
@@ -159,10 +159,24 @@ add_subdirectory("Sources/HodEngine/Application")
 add_subdirectory("Sources/HodApplication")
 
 if (NOT ANDROID)
-  add_subdirectory("Sources/HodEngine/CoreEditor")
-  add_subdirectory("Sources/HodEngine/InputEditor")
-  add_subdirectory("Sources/HodEngine/GameEditor")
-  add_subdirectory("Sources/HodEngine/UIEditor")
-  add_subdirectory("Sources/HodEngine/Editor")
-  add_subdirectory("Sources/HodEditor")
+	add_subdirectory("Sources/HodEngine/CoreEditor")
+	add_subdirectory("Sources/HodEngine/InputEditor")
+	add_subdirectory("Sources/HodEngine/GameEditor")
+	add_subdirectory("Sources/HodEngine/UIEditor")
+	add_subdirectory("Sources/HodEngine/Editor")
+	add_subdirectory("Sources/HodEditor")
 endif()
+
+install(EXPORT HodEngineTargets
+	FILE HodEngineTargets.cmake
+	NAMESPACE HodEngine::
+	DESTINATION lib/cmake/HodEngine
+)
+
+export(EXPORT HodEngineTargets
+	FILE "${CMAKE_BINARY_DIR}/HodEngineTargets.cmake"
+	NAMESPACE HodEngine::
+)
+file(WRITE "${CMAKE_BINARY_DIR}/HodEngineConfig.cmake"
+	"include(\"\${CMAKE_CURRENT_LIST_DIR}/HodEngineTargets.cmake\")\n"
+)
