--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 include(Global)
+include(ClangBuildAnalyzer)
 
 project(Editor LANGUAGES CXX)
 
@@ -94,3 +95,5 @@ install(TARGETS Editor
 	RUNTIME DESTINATION bin
 	INCLUDES DESTINATION include
 )
+
+ClangBuildAnalyzer(Editor)
