--- a/Sources/HodEngine/UIEditor/CMakeLists.txt
+++ b/Sources/HodEngine/UIEditor/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 include(Global)
+include(ClangBuildAnalyzer)
 
 project(UIEditor LANGUAGES CXX)
 
@@ -33,3 +34,5 @@ install(TARGETS UIEditor
 	RUNTIME DESTINATION bin
 	INCLUDES DESTINATION include
 )
+
+ClangBuildAnalyzer(UIEditor)
