--- a/Sources/HodEngine/UI/CMakeLists.txt
+++ b/Sources/HodEngine/UI/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 
-include(Global)
 include(ClangBuildAnalyzer)
 
 project(UI LANGUAGES CXX)
@@ -11,11 +10,10 @@ add_library(UI ${LIB_TYPE} ${Srcs} ${Includes})
 add_library(HodEngine::UI ALIAS UI)
 set_target_properties(UI PROPERTIES
 	FOLDER "HodEngine"
-	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
 
 target_include_directories(UI PUBLIC 
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Sources>
 	$<INSTALL_INTERFACE:include>
 )
 target_precompile_headers(UI PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
@@ -24,8 +22,10 @@ target_link_libraries(UI
 	PUBLIC Game Renderer
 )
 
-target_compile_definitions(UI PUBLIC ${PLATFORM_DEFINE})
-target_compile_definitions(UI PRIVATE HOD_UI_EXPORT)
+target_compile_definitions(UI
+	PUBLIC ${HOD_PLATFORM_DEFINE}
+	PRIVATE HOD_UI_EXPORT
+)
 
 install(TARGETS UI
 	EXPORT HodEngineTargets
