--- a/Sources/HodEngine/UIEditor/CMakeLists.txt
+++ b/Sources/HodEngine/UIEditor/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 
-include(Global)
 include(ClangBuildAnalyzer)
 
 project(UIEditor LANGUAGES CXX)
@@ -11,11 +10,10 @@ add_library(UIEditor ${LIB_TYPE} ${Srcs} ${Includes})
 add_library(HodEngine::UIEditor ALIAS UIEditor)
 set_target_properties(UIEditor PROPERTIES
 	FOLDER "HodEngine"
-	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
 
 target_include_directories(UIEditor PUBLIC 
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Sources>
 	$<INSTALL_INTERFACE:include>
 )
 target_precompile_headers(UIEditor PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
@@ -24,8 +22,10 @@ target_link_libraries(UIEditor
 	PUBLIC UI Editor
 )
 
-target_compile_definitions(UIEditor PUBLIC ${PLATFORM_DEFINE})
-target_compile_definitions(UIEditor PRIVATE HOD_UI_EDITOR_EXPORT)
+target_compile_definitions(UIEditor
+	PUBLIC ${HOD_PLATFORM_DEFINE}
+	PRIVATE HOD_UI_EDITOR_EXPORT
+)
 
 install(TARGETS UIEditor
 	EXPORT HodEngineTargets
