--- a/Sources/HodEngine/CoreEditor/CMakeLists.txt
+++ b/Sources/HodEngine/CoreEditor/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 
-include(Global)
 include(ClangBuildAnalyzer)
 
 project(CoreEditor LANGUAGES CXX)
@@ -11,11 +10,10 @@ add_library(CoreEditor ${LIB_TYPE} ${Srcs} ${Includes})
 add_library(HodEngine::CoreEditor ALIAS CoreEditor)
 set_target_properties(CoreEditor PROPERTIES
 	FOLDER "HodEngine"
-	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
 
 target_include_directories(CoreEditor PUBLIC 
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Sources>
 	$<INSTALL_INTERFACE:include>
 )
 target_precompile_headers(CoreEditor PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
@@ -24,8 +22,10 @@ target_link_libraries(CoreEditor
 	PUBLIC Core Editor
 )
 
-target_compile_definitions(CoreEditor PUBLIC ${PLATFORM_DEFINE})
-target_compile_definitions(CoreEditor PRIVATE HOD_CORE_EDITOR_EXPORT)
+target_compile_definitions(CoreEditor
+	PUBLIC ${HOD_PLATFORM_DEFINE}
+	PRIVATE HOD_CORE_EDITOR_EXPORT
+)
 
 install(TARGETS CoreEditor
 	EXPORT HodEngineTargets
