--- a/Sources/HodEngine/GameEditor/CMakeLists.txt
+++ b/Sources/HodEngine/GameEditor/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 
-include(Global)
 include(ClangBuildAnalyzer)
 
 project(GameEditor LANGUAGES CXX)
@@ -11,11 +10,10 @@ add_library(GameEditor ${LIB_TYPE} ${Srcs} ${Includes})
 add_library(HodEngine::GameEditor ALIAS GameEditor)
 set_target_properties(GameEditor PROPERTIES
 	FOLDER "HodEngine"
-	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
 
 target_include_directories(GameEditor PUBLIC 
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Sources>
 	$<INSTALL_INTERFACE:include>
 )
 target_precompile_headers(GameEditor PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
@@ -24,8 +22,10 @@ target_link_libraries(GameEditor
 	PUBLIC Game Editor
 )
 
-target_compile_definitions(GameEditor PUBLIC ${PLATFORM_DEFINE})
-target_compile_definitions(GameEditor PRIVATE HOD_GAME_EDITOR_EXPORT)
+target_compile_definitions(GameEditor
+	PUBLIC ${HOD_PLATFORM_DEFINE}
+	PRIVATE HOD_GAME_EDITOR_EXPORT
+)
 
 install(TARGETS GameEditor
 	EXPORT HodEngineTargets
