--- a/Sources/HodEngine/Physics/CMakeLists.txt
+++ b/Sources/HodEngine/Physics/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 
-include(Global)
 include(ClangBuildAnalyzer)
 
 project(Physics LANGUAGES CXX)
@@ -13,11 +12,10 @@ add_library(Physics ${LIB_TYPE} ${Srcs} ${Includes})
 add_library(HodEngine::Physics ALIAS Physics)
 set_target_properties(Physics PROPERTIES
 	FOLDER "HodEngine"
-	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
 
 target_include_directories(Physics PUBLIC 
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Sources>
 	$<INSTALL_INTERFACE:include>
 )
 target_precompile_headers(Physics PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
@@ -27,8 +25,10 @@ target_link_libraries(Physics
 	PRIVATE Box2d::Box2d
 )
 
-target_compile_definitions(Physics PUBLIC ${PLATFORM_DEFINE})
-target_compile_definitions(Physics PRIVATE HOD_PHYSICS_EXPORT)
+target_compile_definitions(Physics
+	PUBLIC ${HOD_PLATFORM_DEFINE}
+	PRIVATE HOD_PHYSICS_EXPORT
+)
 
 install(TARGETS Physics
 	EXPORT HodEngineTargets
